--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
 .landing-wrapper{
-    width: 100vw;
-    background: url(../images/desktop/image-header.jpg) no-repeat bottom;
-    background-size: cover;
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background: url(../images/desktop/image-header.jpg) no-repeat left;
+    background-size: 100%;
+    height: 47rem;
+}
+.title{
+    font-size: 3.7rem;
+    font-family: 'Fraunces', serif;
+    color: hsl(0, 0%, 100%);
+    word-spacing: 0.3rem;
+    letter-spacing: 0.5rem;
+}
+.arrow{
+    margin-top: 4.8rem;
 }
