style: change margin-top for the title

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
     color: hsl(0, 0%, 100%);
     word-spacing: 0.3rem;
     letter-spacing: 0.5rem;
+    margin-top: 5rem;
 }
 .arrow{
     margin-top: 4.8rem;
