--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -19,3 +19,8 @@
         margin-top: 3rem;
     }
 }
+@media screen and (max-width: 375px) {
+    .landing-wrapper{
+        background: url(../images/mobile/image-header.jpg) no-repeat bottom;
+    }
+}
