style: make the skill text fixed in width

--- a/src/css/Grid.css
+++ b/src/css/Grid.css
@@ -52,7 +52,7 @@
 .skill-text{
     font-family: 'Barlow', sans-serif;
     text-align: center;
-    width: 50%;
+    width: 22rem;
 }
 .graphic-design-text{
     color: hsl(167, 40%, 24%);
