feat: optimise the layout for mobile devices

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -23,3 +23,8 @@
     cursor: pointer;
     fill: hsl(0, 0%, 100%);
 }
+@media screen and (max-width: 400px) {
+    .footer-nav{
+        width: 90%;
+    }
+}
