--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -22,6 +22,11 @@
         top: 38%;
     }
 }
+@media screen and (min-width: 1750px){
+    .arrow{
+        top: 34%;
+    }
+}
 @media screen and (max-width: 790px) {
     .title{
         font-size: 3rem;
